# file_finder

./: .env.example  .gitignore  README.md  pyproject.toml  verify_setup.py
examples/: demo.py  example_usage.py
src/: __init__.py  config.py  core.py
src/file_finder/: config.py  core.py
tests/: __init__.py  conftest.py  test_condition.py  test_config.py  test_file_finder.py
